--- a/test/manual/CMakeLists.txt
+++ b/test/manual/CMakeLists.txt
@@ -4,7 +4,13 @@ include_directories("${CMAKE_SOURCE_DIR}/src")
 
 find_package(Boost REQUIRED COMPONENTS unit_test_framework filesystem system)
 
-add_executable(manual_tests.exe test_simulator_equations.cpp)
-target_link_libraries(manual_tests.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
+# Simulator equations: check that we're generating sensible looking decay times with our accept-reject
+add_executable(simulator_equations.exe test_simulator_equations.cpp)
+target_link_libraries(simulator_equations.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
+add_test(NAME simulator_equations COMMAND simulator_equations.exe)
 
-add_test(NAME manual COMMAND manual_tests.exe)
+# Fitter: test that our fitter doesn't do anything weird
+add_executable(test_fitter.exe test_fitter.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp)
+target_include_directories(test_fitter.exe PUBLIC ${CMAKE_SOURCE_DIR}/src/})
+target_link_libraries(test_fitter.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
+add_test(NAME test_fitter COMMAND test_fitter.exe)
