--- a/test/it/CMakeLists.txt
+++ b/test/it/CMakeLists.txt
@@ -4,7 +4,7 @@ include_directories("${CMAKE_SOURCE_DIR}/src")
 
 find_package(Boost REQUIRED COMPONENTS unit_test_framework filesystem system)
 
-add_executable(it.exe test_decay_simulator.cpp)
+add_executable(it.exe it.cpp)
 target_link_libraries(it.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
 
 add_test(NAME it COMMAND it.exe)
