manual test that minuit fitter matches up with ROOT's fit (it doesn't)

--- a/test/manual/CMakeLists.txt
+++ b/test/manual/CMakeLists.txt
@@ -11,6 +11,10 @@ add_test(NAME simulator_equations COMMAND simulator_equations.exe)
 
 # Fitter: test that our fitter doesn't do anything weird
 add_executable(test_fitter.exe test_fitter.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp)
-target_include_directories(test_fitter.exe PUBLIC ${CMAKE_SOURCE_DIR}/src/})
 target_link_libraries(test_fitter.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
 add_test(NAME test_fitter COMMAND test_fitter.exe)
+
+# Test that out minuit fitter and the ROOT builtin fitter do sensible things
+add_executable(test_minuit_fitter.exe test_minuit_fitters.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp)
+target_link_libraries(test_minuit_fitter.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
+add_test(NAME test_compare_minuit_root COMMAND test_minuit_fitter.exe)
