--- a/test/manual/CMakeLists.txt
+++ b/test/manual/CMakeLists.txt
@@ -14,7 +14,12 @@ add_executable(test_fitter.exe test_fitter.cpp ${CMAKE_SOURCE_DIR}/src/PullStudy
 target_link_libraries(test_fitter.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
 add_test(NAME test_fitter COMMAND test_fitter.exe)
 
-# Test that out minuit fitter and the ROOT builtin fitter do sensible things
+# Test that our minuit fitter and the ROOT builtin fitter do sensible things
 add_executable(test_minuit_fitter.exe test_minuit_fitters.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp)
 target_link_libraries(test_minuit_fitter.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
 add_test(NAME test_compare_minuit_root COMMAND test_minuit_fitter.exe)
+
+# Test that our parameter scan works ok for a fit to a simple polynomial
+add_executable(test_param_scan.exe test_param_scan.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp)
+target_link_libraries(test_param_scan.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
+add_test(NAME test_param_scan COMMAND test_param_scan.exe)
