nicer implementation of accept-reject using co-ordinate transformation uniform -> exponential + a better algorithm
Also more in depth testing of the simulator equation generation

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,19 +1,20 @@
 add_library(D2K3Pi SHARED
   DecaySimulator.cpp
   Fitter.cpp
-  MCGenerator.cpp
   MinuitFitter.cpp
   PhaseSpaceBinning.cpp
   RatioCalculator.cpp
   ReadAmpGen.cpp
   util.cpp
+  ../src/PullStudyHelpers.cpp
   )
 
 set(CMAKE_BUILD_TYPE Debug)
 
 target_include_directories(D2K3Pi
-  PUBLIC ${CMAKE_CURRENT_LIST_DIR} "../include/"
+  PUBLIC ${CMAKE_CURRENT_LIST_DIR} "../include/" "../src/"
   )
+
 target_compile_features(D2K3Pi
   PUBLIC cxx_auto_type cxx_range_for cxx_uniform_initialization
   )
