--- a/test/manual/CMakeLists.txt
+++ b/test/manual/CMakeLists.txt
@@ -23,3 +23,8 @@ add_test(NAME test_compare_minuit_root COMMAND test_minuit_fitter.exe)
 add_executable(test_param_scan.exe test_param_scan.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp)
 target_link_libraries(test_param_scan.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
 add_test(NAME test_param_scan COMMAND test_param_scan.exe)
+
+# Run a quick pull study to check our fitter works in isolation
+add_executable(test_fitter_pull.exe test_fitter_pull.cpp)
+target_link_libraries(test_fitter_pull.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
+add_test(NAME test_fitter_pull COMMAND test_fitter_pull.exe)
