--- a/test/manual/CMakeLists.txt
+++ b/test/manual/CMakeLists.txt
@@ -25,6 +25,6 @@ target_link_libraries(test_param_scan.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRA
 add_test(NAME test_param_scan COMMAND test_param_scan.exe)
 
 # Run a quick pull study to check our fitter works in isolation
-add_executable(test_fitter_pull.exe test_fitter_pull.cpp)
-target_link_libraries(test_fitter_pull.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
-add_test(NAME test_fitter_pull COMMAND test_fitter_pull.exe)
+add_executable(test_fitter2.exe test_fitter2.cpp)
+target_link_libraries(test_fitter2.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
+add_test(NAME test_fitter2 COMMAND test_fitter2.exe)
