--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(D2K3Pi SHARED
   DecaySimulator.cpp
-  Fitter.cpp
+  fitter/Fitter.cpp
   MinuitFitter.cpp
   PhaseSpaceBinning.cpp
   RatioCalculator.cpp
@@ -11,7 +11,7 @@ add_library(D2K3Pi SHARED
 set(CMAKE_BUILD_TYPE Debug)
 
 target_include_directories(D2K3Pi
-  PUBLIC ${CMAKE_CURRENT_LIST_DIR} "../include/" "../src/"
+  PUBLIC ${CMAKE_CURRENT_LIST_DIR} "../include/" "../src/" "fitter/"
   )
 
 target_compile_features(D2K3Pi
