--- a/test/manual/CMakeLists.txt
+++ b/test/manual/CMakeLists.txt
@@ -11,7 +11,7 @@ target_link_libraries(simulator_equations.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_L
 add_test(NAME simulator_equations COMMAND simulator_equations.exe)
 
 # Fitter: test that our fitter doesn't do anything weird
-add_executable(test_fitter.exe test_fitter.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp)
+add_executable(test_fitter.exe test_fitter.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp testutil.cpp)
 target_link_libraries(test_fitter.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
 add_test(NAME test_fitter COMMAND test_fitter.exe)
 
@@ -21,6 +21,6 @@ target_link_libraries(test_minuit_fitter.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LI
 add_test(NAME test_compare_minuit_root COMMAND test_minuit_fitter.exe)
 
 # Test that our parameter scan works ok for a fit to a simple polynomial
-add_executable(test_param_scan.exe test_param_scan.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp)
+add_executable(test_param_scan.exe test_param_scan.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp testutil.cpp)
 target_link_libraries(test_param_scan.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
 add_test(NAME test_param_scan COMMAND test_param_scan.exe)
