--- a/test/manual/CMakeLists.txt
+++ b/test/manual/CMakeLists.txt
@@ -24,3 +24,8 @@ add_test(NAME test_compare_minuit_root COMMAND test_minuit_fitter.exe)
 add_executable(test_param_scan.exe test_param_scan.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp testutil.cpp)
 target_link_libraries(test_param_scan.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
 add_test(NAME test_param_scan COMMAND test_param_scan.exe)
+
+# Pull study
+# This is so slow that I won't add a make-test to it
+add_executable(pull-study test_pull_study.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp)
+target_link_libraries(pull-study D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
