--- a/test/manual/CMakeLists.txt
+++ b/test/manual/CMakeLists.txt
@@ -15,6 +15,11 @@ add_executable(test_fitter.exe test_fitter.cpp ${CMAKE_SOURCE_DIR}/src/PullStudy
 target_link_libraries(test_fitter.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
 add_test(NAME test_fitter COMMAND test_fitter.exe)
 
+# Test that our Fitter and calculator work..?
+add_executable(test_fitter_calculator.exe test_calculator_and_fitter.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp testutil.cpp)
+target_link_libraries(test_fitter_calculator.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
+add_test(NAME test_fitter_and_calculator COMMAND test_fitter_calculator.exe)
+
 # Test that our minuit fitter and the ROOT builtin fitter do sensible things
 add_executable(test_minuit_fitter.exe test_minuit_fitters.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp)
 target_link_libraries(test_minuit_fitter.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
