--- a/test/manual/CMakeLists.txt
+++ b/test/manual/CMakeLists.txt
@@ -22,15 +22,15 @@ add_test(NAME test_param_scan COMMAND test_param_scan.exe)
 
 
 # Pull studies
-# Fitter: test that our fitter doesn't do anything weird
+# These are so slow that I won't add make-tests for them; they need to be run manually
+
+# Pull study on ideal ratios with gaussian noise
 add_executable(test_fitter.exe pull_fitter.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp testutil.cpp)
 target_link_libraries(test_fitter.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
-add_test(NAME test_fitter COMMAND test_fitter.exe)
 
 # Pull study generating counts by integrating the expected rates
 add_executable(test_fitter_calculator.exe pull_calculator_and_fitter.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp testutil.cpp)
 target_link_libraries(test_fitter_calculator.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
-add_test(NAME test_fitter_and_calculator COMMAND test_fitter_calculator.exe)
 
 # This is so slow that I won't add a make-test to it
 add_executable(pull-study pull_study.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp)
