pull study thing for generated decay times;util function for expected DCS rate at a given time

--- a/test/manual/CMakeLists.txt
+++ b/test/manual/CMakeLists.txt
@@ -24,6 +24,10 @@ add_test(NAME test_param_scan COMMAND test_param_scan.exe)
 # Pull studies
 # These are so slow that I won't add make-tests for them; they need to be run manually
 
+# Pull study on generated decay times, fitting to  (a + bt + ct^2)exp(-width * t)
+add_executable(test_simulator_pull.exe SimulatorEqnsPull.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp testutil.cpp)
+target_link_libraries(test_simulator_pull.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
+
 # Pull study on ideal ratios with gaussian noise
 add_executable(test_fitter.exe pull_fitter.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp testutil.cpp)
 target_link_libraries(test_fitter.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
@@ -32,6 +36,5 @@ target_link_libraries(test_fitter.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES
 add_executable(test_fitter_calculator.exe pull_calculator_and_fitter.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp testutil.cpp)
 target_link_libraries(test_fitter_calculator.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
 
-# This is so slow that I won't add a make-test to it
 add_executable(pull-study pull_study.cpp ${CMAKE_SOURCE_DIR}/src/PullStudyHelpers.cpp)
 target_link_libraries(pull-study D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
