--- a/test/pull_study/CMakeLists.txt
+++ b/test/pull_study/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(pull-study pull_study.cpp PullStudyHelpers.cpp)
-target_link_libraries(pull-study D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
+add_executable(pull-study pull_study.cpp PullStudyHelpers.cpp ${CMAKE_SOURCE_DIR}/test/pull_study/DecaySimulator.cpp)
+target_link_libraries(pull-study D2K3Pi ${Boost_LIBRARIES} ${ROOT_LIBRARIES})
