--- a/test/it/CMakeLists.txt
+++ b/test/it/CMakeLists.txt
@@ -1,6 +1,8 @@
-# Add lib/ to our include path so that we can access headers from our UT
+# Add lib/ to our include path so that we can access headers from our IT
 include_directories("${CMAKE_SOURCE_DIR}/lib/")
 include_directories("${CMAKE_SOURCE_DIR}/src")
+
+include_directories("${CMAKE_SOURCE_DIR}/efficiency/include/")
 
 find_package(Boost REQUIRED COMPONENTS unit_test_framework filesystem system)
 
@@ -10,8 +12,9 @@ add_executable(it.exe
                test_minuit_fitter.cpp
                test_ratio_calculator.cpp
                test_simulator.cpp
+               efficiency/test_amplitudes.cpp
                ${CMAKE_SOURCE_DIR}/test/pull_study/DecaySimulator.cpp)
 
-target_link_libraries(it.exe D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
+target_link_libraries(it.exe D2K3Pi efficiency ${ROOT_LIBRARIES} ${Boost_LIBRARIES} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} dl)
 
 add_test(NAME it COMMAND it.exe)
