a cpp script for converting a ROOT file into a Dalitz plot

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,9 @@ include_directories(${Boost_INCLUDE_DIRS})
 # Some standard flags
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wformat-security -Werror -O3 -g")
 
+# Debug
+set(CMAKE_BUILD_TYPE Debug)
+
 # Add our fitter library
 # This defines a static library D2K3Pi
 add_subdirectory("${CMAKE_SOURCE_DIR}/lib")
@@ -28,8 +31,8 @@ add_subdirectory("${CMAKE_SOURCE_DIR}/lib")
 # Add also an efficiency library
 add_subdirectory("${CMAKE_SOURCE_DIR}/efficiency")
 
-# Debug
-set(CMAKE_BUILD_TYPE Debug)
+# What is going on here
+add_subdirectory(${CMAKE_SOURCE_DIR}/efficiency/scripts/)
 
 # Bin ampgen decays
 add_subdirectory("${CMAKE_SOURCE_DIR}/test/bin_decays/")
@@ -39,7 +42,6 @@ enable_testing()
 add_subdirectory("${CMAKE_SOURCE_DIR}/test/ut/")
 
 # IT
-# current noop
 add_subdirectory("${CMAKE_SOURCE_DIR}/test/it/")
 
 # Stupid manual tests
