some sort of code that return the efficiency

--- a/efficiency/CMakeLists.txt
+++ b/efficiency/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(efficiency STATIC
+  ${CMAKE_SOURCE_DIR}/lib/src/util.cpp
   lib/amplitudes.cpp
   lib/ReadRoot.cpp
   lib/findZ.cpp
@@ -11,7 +12,7 @@ add_library(efficiency STATIC
 set(CMAKE_BUILD_TYPE Debug)
 
 target_include_directories(efficiency
-  PUBLIC ${CMAKE_CURRENT_LIST_DIR} "include/" "include/"
+  PUBLIC ${CMAKE_CURRENT_LIST_DIR} "include/" "include/" "${CMAKE_SOURCE_DIR}/lib/include/"
   )
 
 target_compile_features(efficiency
