classes and tests for creating a graph, checking for cycles and checking whether it's spanning

--- a/efficiency/CMakeLists.txt
+++ b/efficiency/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(efficiency STATIC
   lib/flatPhsp.cpp
   lib/toyStudy.cpp
   lib/efficiency.cpp
+  lib/graphTheory.cpp
   lib/efficiencyUtil.cpp
   )
 
