abstract common util fcns into common lib. also rename fitter lib to charmFitter because that makes more sense

--- a/efficiency/scripts/CMakeLists.txt
+++ b/efficiency/scripts/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Dalitz plot thing
 add_executable(dalitzthing.exe ${CMAKE_SOURCE_DIR}/efficiency/scripts/dalitzPlot.cpp)
-target_link_libraries(dalitzthing.exe efficiency D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
+target_link_libraries(dalitzthing.exe common efficiency charmFitter ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
 
 # Example toy efficiency thing with 1d histogram projections too
 add_executable(toy_efficiency_example.exe ${CMAKE_SOURCE_DIR}/efficiency/scripts/toy_efficiency_example.cpp)
-target_link_libraries(toy_efficiency_example.exe efficiency D2K3Pi ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
+target_link_libraries(toy_efficiency_example.exe common efficiency charmFitter ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
