--- a/test/it/CMakeLists.txt
+++ b/test/it/CMakeLists.txt
@@ -1,9 +1,3 @@
-# Add lib/ to our include path so that we can access headers from our IT
-include_directories("${CMAKE_SOURCE_DIR}/lib/")
-include_directories("${CMAKE_SOURCE_DIR}/src")
-
-include_directories("${CMAKE_SOURCE_DIR}/efficiency/include/")
-
 find_package(Boost REQUIRED COMPONENTS unit_test_framework filesystem system)
 
 add_executable(it.exe
@@ -13,10 +7,12 @@ add_executable(it.exe
                test_ratio_calculator.cpp
                test_simulator.cpp
                efficiency/test_amplitudes.cpp
-               # efficiency/flat_phase_space.cpp
+               # efficiency/flat_phase_space.cpp  # What the heck
                efficiency/test_chow_liu.cpp
                ${CMAKE_SOURCE_DIR}/test/pull_study/DecaySimulator.cpp)
 
-target_link_libraries(it.exe D2K3Pi efficiency ${ROOT_LIBRARIES} ${Boost_LIBRARIES} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} dl)
+target_include_directories(it.exe PUBLIC "${CMAKE_SOURCE_DIR}/charmFitter/include/" "${CMAKE_SOURCE_DIR}/efficiency/include")
+
+target_link_libraries(it.exe common charmFitter efficiency ${ROOT_LIBRARIES} ${Boost_LIBRARIES} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} dl)
 
 add_test(NAME it COMMAND it.exe)
