--- a/charmFitter/CMakeLists.txt
+++ b/charmFitter/CMakeLists.txt
@@ -11,6 +11,8 @@ set(fitter
 add_library(charmFitter STATIC
   src/PhaseSpaceBinning.cpp
   src/RatioCalculator.cpp
+  src/DecaySimulator.cpp
+  src/physics.cpp
   src/fitterUtil.cpp
   ${fitter}
   )
@@ -24,3 +26,5 @@ target_include_directories(charmFitter
 target_compile_features(charmFitter
   PUBLIC cxx_auto_type cxx_range_for cxx_uniform_initialization
   )
+
+add_subdirectory(scripts)
