exe for doing cuts

--- a/lhcbMonteCarlo/sWeighting/CMakeLists.txt
+++ b/lhcbMonteCarlo/sWeighting/CMakeLists.txt
@@ -1,10 +1,11 @@
+# sWeighting lib
 add_library(sWeighting STATIC
   ${CMAKE_SOURCE_DIR}/lhcbMonteCarlo/sWeighting/sWeighting.cpp
   )
-
-# Link filesystem lib
-target_link_libraries(sWeighting stdc++fs)
+target_link_libraries(sWeighting stdc++fs) # Filesystem lib
 
 include_directories(${CMAKE_SOURCE_DIR}/lhcbMonteCarlo/sWeighting/)
-
 add_subdirectory("${CMAKE_SOURCE_DIR}/lhcbMonteCarlo/sWeighting/scripts/")
+
+# cuts lib
+add_library(cuts STATIC ${CMAKE_SOURCE_DIR}/lhcbMonteCarlo/sWeighting/cuts.cpp)
