--- a/lhcbMonteCarlo/sWeighting/scripts/CMakeLists.txt
+++ b/lhcbMonteCarlo/sWeighting/scripts/CMakeLists.txt
@@ -4,3 +4,6 @@ target_link_libraries(add_delta_m_branch.exe ${ROOT_LIBRARIES} stdc++fs)
 
 add_executable(example_s_weighting.exe ${CMAKE_SOURCE_DIR}/lhcbMonteCarlo/sWeighting/scripts/example_s_weighting.cpp)
 target_link_libraries(example_s_weighting.exe sWeighting ${ROOT_LIBRARIES} common)
+
+add_executable(make_cuts.exe ${CMAKE_SOURCE_DIR}/lhcbMonteCarlo/sWeighting/scripts/makeCuts.cpp)
+target_link_libraries(make_cuts.exe cuts ${ROOT_LIBRARIES})
