--- a/charmFitter/scripts/CMakeLists.txt
+++ b/charmFitter/scripts/CMakeLists.txt
@@ -1,3 +1,7 @@
+# Plots showing the behaviour of the decay simulator + fitters
+add_executable(plots plots.cpp)
+target_link_libraries(plots charmFitter common ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
+
 # Pull study
 add_executable(pull-study pull_study.cpp) 
 target_link_libraries(pull-study common charmFitter ${Boost_LIBRARIES} ${ROOT_LIBRARIES})
@@ -9,4 +13,8 @@ target_link_libraries(test_param_scan.exe common charmFitter ${ROOT_LIBRARIES} $
 
 # Example decay binning
 add_executable(bin_decays.exe bin_generated_decays.cpp ReadAmpGen.cpp)
-target_link_libraries(bin_decays.exe common charmFitter ${ROOT_LIBRARIES} ${Boost_LIBRARIES} ${CMAKE_DL_LIBS})
+target_link_libraries(bin_decays.exe charmFitter common ${ROOT_LIBRARIES} ${Boost_LIBRARIES} ${CMAKE_DL_LIBS})
+
+# Create some plots using the decay simulator
+add_executable(decay_simulator_plots.exe decay_simulator_plots.cpp)
+target_link_libraries(decay_simulator_plots.exe charmFitter common ${ROOT_LIBRARIES})
